--- a/.env
+++ b/.env
@@ -2,7 +2,5 @@
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=
-DB_NAME=dropi
-
-# JWT Configuration
-JWT_SECRET=your-secret-key-should-be-long-and-secure
+DB_NAME=drop
+DB_PORT=3306
