--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.8.2",
     "bcryptjs": "^2.4.3",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
@@ -22,7 +22,8 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.3",
-    "sweetalert2": "^11.10.6"
+    "sweetalert2": "^11.6.13",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -40,6 +41,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^6.2.1"
   }
 }
