--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  
-
   "homepage": "https://dropi.co.alexcode.org/",
-    "scripts": {
-      "dev": "vite",
-"build": "vite build --outDir dist",
-      "preview": "vite preview"
-    }
-  ,
-  
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build --outDir dist",
+    "preview": "vite preview",
+    "start": "server dist -s -n -L -p $PORT"
+  },
   "dependencies": {
+    "@railway/cli": "^4.5.4",
     "axios": "^1.8.2",
     "bcryptjs": "^2.4.3",
     "i18next": "^23.10.1",
@@ -26,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.3",
+    "serve": "^14.2.4",
     "sweetalert2": "^11.6.13",
     "uuid": "^11.1.0"
   },
